grammar/ZenithGrammarParser.py
# Generated from ZenithGrammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZenithGrammarParser ( Parser ):

    grammarFileName = "ZenithGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'start'", "'end'", "'{'", "'}'", "'int'", 
                     "'boolean'", "'string'", "'float'", "'double'", "'{}'", 
                     "'('", "')'", "'if'", "'elseIf'", "'else'", "'while'", 
                     "'for'", "'in'", "'range'", "'..'", "';'", "'--'", 
                     "'++'", "'?'", "':'", "'print'", "','", "'num'", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'and'", "'or'", 
                     "'<'", "'>'", "'<='", "'>='", "'not'", "'=='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "<INVALID>", "'\"\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DIGITS", "BOOLEAN", "ADD", "SUB", "MUL", 
                      "DIV", "AND", "OR", "LESS_THAN", "GREATER_THAN", "LESS_THAN_OR_EQUL", 
                      "MORE_THAN_OR_EQUL", "NOT_EQUL_TO", "IS_EQUL_TO", 
                      "VARIABLE_IDENTIFIER", "VALID_STRING", "DECIMAL_VALUE", 
                      "ASSIGNMENT_OPERATOR", "WHITE_SPACES", "EMPTY_STRING", 
                      "Comment" ]

    RULE_program = 0
    RULE_block = 1
    RULE_atomic_block = 2
    RULE_declaration = 3
    RULE_command = 4
    RULE_assignment_expr = 5
    RULE_exprs = 6
    RULE_bool_expr = 7
    RULE_comp_expr = 8
    RULE_num_expr = 9
    RULE_add_sub_expr = 10
    RULE_term_expr = 11
    RULE_bracket_expr = 12
    RULE_cond_expr = 13
    RULE_if_expr = 14
    RULE_else_if_expr = 15
    RULE_else_expr = 16
    RULE_while_expr = 17
    RULE_for_enhanced = 18
    RULE_rangeVal = 19
    RULE_for_loop = 20
    RULE_variable_change_part = 21
    RULE_decrement_expression = 22
    RULE_increment_expression = 23
    RULE_ternary_expr = 24
    RULE_value = 25
    RULE_print = 26
    RULE_print_parameters = 27
    RULE_primitive_type = 28

    ruleNames =  [ "program", "block", "atomic_block", "declaration", "command", 
                   "assignment_expr", "exprs", "bool_expr", "comp_expr", 
                   "num_expr", "add_sub_expr", "term_expr", "bracket_expr", 
                   "cond_expr", "if_expr", "else_if_expr", "else_expr", 
                   "while_expr", "for_enhanced", "rangeVal", "for_loop", 
                   "variable_change_part", "decrement_expression", "increment_expression", 
                   "ternary_expr", "value", "print", "print_parameters", 
                   "primitive_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    DIGITS=29
    BOOLEAN=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    AND=35
    OR=36
    LESS_THAN=37
    GREATER_THAN=38
    LESS_THAN_OR_EQUL=39
    MORE_THAN_OR_EQUL=40
    NOT_EQUL_TO=41
    IS_EQUL_TO=42
    VARIABLE_IDENTIFIER=43
    VALID_STRING=44
    DECIMAL_VALUE=45
    ASSIGNMENT_OPERATOR=46
    WHITE_SPACES=47
    EMPTY_STRING=48
    Comment=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ZenithGrammarParser.BlockContext,0)


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ZenithGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ZenithGrammarParser.T__0)
            self.state = 59
            self.block()
            self.state = 60
            self.match(ZenithGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZenithGrammarParser.Atomic_blockContext)
            else:
                return self.getTypedRuleContext(ZenithGrammarParser.Atomic_blockContext,i)


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ZenithGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(ZenithGrammarParser.T__2)
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 63
                    self.atomic_block()
                    self.state = 66 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8796160337888) != 0)):
                        break

                self.state = 68
                self.match(ZenithGrammarParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(ZenithGrammarParser.T__2)
                self.state = 71
                self.match(ZenithGrammarParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZenithGrammarParser.CommandContext)
            else:
                return self.getTypedRuleContext(ZenithGrammarParser.CommandContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZenithGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ZenithGrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_atomic_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_block" ):
                listener.enterAtomic_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_block" ):
                listener.exitAtomic_block(self)




    def atomic_block(self):

        localctx = ZenithGrammarParser.Atomic_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atomic_block)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 16, 17, 26, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 74
                        self.command()

                    else:
                        raise NoViableAltException(self)
                    self.state = 77 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass
            elif token in [5, 6, 7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 79
                        self.declaration()

                    else:
                        raise NoViableAltException(self)
                    self.state = 82 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FloatDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def DECIMAL_VALUE(self):
            return self.getToken(ZenithGrammarParser.DECIMAL_VALUE, 0)
        def ternary_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Ternary_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatDeclaration" ):
                listener.enterFloatDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatDeclaration" ):
                listener.exitFloatDeclaration(self)


    class StringDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def VALID_STRING(self):
            return self.getToken(ZenithGrammarParser.VALID_STRING, 0)
        def ternary_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Ternary_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringDeclaration" ):
                listener.enterStringDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringDeclaration" ):
                listener.exitStringDeclaration(self)


    class EmptyDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyDeclaration" ):
                listener.enterEmptyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyDeclaration" ):
                listener.exitEmptyDeclaration(self)


    class IntegerDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def num_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Num_exprContext,0)

        def ternary_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Ternary_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerDeclaration" ):
                listener.enterIntegerDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerDeclaration" ):
                listener.exitIntegerDeclaration(self)


    class BooleanDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def bool_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Bool_exprContext,0)

        def ternary_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Ternary_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanDeclaration" ):
                listener.enterBooleanDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanDeclaration" ):
                listener.exitBooleanDeclaration(self)


    class DoubleDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def DECIMAL_VALUE(self):
            return self.getToken(ZenithGrammarParser.DECIMAL_VALUE, 0)
        def ternary_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Ternary_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoubleDeclaration" ):
                listener.enterDoubleDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoubleDeclaration" ):
                listener.exitDoubleDeclaration(self)



    def declaration(self):

        localctx = ZenithGrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = ZenithGrammarParser.IntegerDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(ZenithGrammarParser.T__4)
                self.state = 87
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 88
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 89
                    self.num_expr()


                pass

            elif la_ == 2:
                localctx = ZenithGrammarParser.IntegerDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(ZenithGrammarParser.T__4)
                self.state = 93
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 94
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 95
                    self.ternary_expr()


                pass

            elif la_ == 3:
                localctx = ZenithGrammarParser.BooleanDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.match(ZenithGrammarParser.T__5)
                self.state = 99
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 100
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 101
                    self.bool_expr(0)


                pass

            elif la_ == 4:
                localctx = ZenithGrammarParser.BooleanDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(ZenithGrammarParser.T__5)
                self.state = 105
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 106
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 107
                    self.ternary_expr()


                pass

            elif la_ == 5:
                localctx = ZenithGrammarParser.StringDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(ZenithGrammarParser.T__6)
                self.state = 111
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 112
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 113
                    self.match(ZenithGrammarParser.VALID_STRING)


                pass

            elif la_ == 6:
                localctx = ZenithGrammarParser.StringDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.match(ZenithGrammarParser.T__6)
                self.state = 117
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 118
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 119
                    self.ternary_expr()


                pass

            elif la_ == 7:
                localctx = ZenithGrammarParser.FloatDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 122
                self.match(ZenithGrammarParser.T__7)
                self.state = 123
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 124
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 125
                    self.match(ZenithGrammarParser.DECIMAL_VALUE)


                pass

            elif la_ == 8:
                localctx = ZenithGrammarParser.FloatDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 128
                self.match(ZenithGrammarParser.T__7)
                self.state = 129
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 130
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 131
                    self.ternary_expr()


                pass

            elif la_ == 9:
                localctx = ZenithGrammarParser.DoubleDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 134
                self.match(ZenithGrammarParser.T__8)
                self.state = 135
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 136
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 137
                    self.match(ZenithGrammarParser.DECIMAL_VALUE)


                pass

            elif la_ == 10:
                localctx = ZenithGrammarParser.DoubleDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 140
                self.match(ZenithGrammarParser.T__8)
                self.state = 141
                self.match(ZenithGrammarParser.VARIABLE_IDENTIFIER)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 142
                    self.match(ZenithGrammarParser.ASSIGNMENT_OPERATOR)
                    self.state = 143
                    self.ternary_expr()


                pass

            elif la_ == 11:
                localctx = ZenithGrammarParser.EmptyDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 146
                self.match(ZenithGrammarParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.If_exprContext,0)


        def while_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.While_exprContext,0)


        def for_enhanced(self):
            return self.getTypedRuleContext(ZenithGrammarParser.For_enhancedContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(ZenithGrammarParser.For_loopContext,0)


        def print_(self):
            return self.getTypedRuleContext(ZenithGrammarParser.PrintContext,0)


        def assignment_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Assignment_exprContext,0)


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ZenithGrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 149
                self.if_expr()
                pass

            elif la_ == 2:
                self.state = 150
                self.while_expr()
                pass

            elif la_ == 3:
                self.state = 151
                self.for_enhanced()
                pass

            elif la_ == 4:
                self.state = 152
                self.for_loop()
                pass

            elif la_ == 5:
                self.state = 153
                self.print_()
                pass

            elif la_ == 6:
                self.state = 154
                self.assignment_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ZenithGrammarParser.RULE_assignment_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IntegerAssignmentContext(Assignment_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.Assignment_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE_IDENTIFIER(self):
            return self.getToken(ZenithGrammarParser.VARIABLE_IDENTIFIER, 0)
        def ASSIGNMENT_OPERATOR(self):
            return self.getToken(ZenithGrammarParser.ASSIGNMENT_OPERATOR, 0)
        def num_expr(self):
            return self.getTypedRuleContext(ZenithGrammarParser.Num_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerAssignment" ):
                listener.enterIntegerAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerAssignment" ):
                listener.exitIntegerAssignment(self)


    class TernaryAssignmentContext(Assignment_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZenithGrammarParser.Assignment_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)
